aplicacionTFG/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: docker.io/miguecrty/tfg-backend:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
