aplicacionTFG/kubernetes/bbdd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
      - name: cassandra
        image: docker.io/miguecrty/tfg-bbdd:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9042
