aplicacionTFG/kubernetes/bbdd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
spec:
  selector:
    app: cassandra
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
